--- a/yosken_challenge1/ios/.gitignore
+++ b/yosken_challenge1/ios/.gitignore
@@ -32,3 +32,6 @@ Runner/GeneratedPluginRegistrant.*
 !default.mode2v3
 !default.pbxuser
 !default.perspectivev3
+
+# google map api key
+AppDelegates.swift
