--- a/yosken_challenge1/pubspec.yaml
+++ b/yosken_challenge1/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http: ^0.13.5
   json_serializable: ^6.5.4
   flutter_riverpod: ^2.0.2
+  google_maps_flutter: ^2.2.1
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
