--- a/yosken_challenge1/pubspec.yaml
+++ b/yosken_challenge1/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_riverpod: ^2.0.2
   google_maps_flutter: ^2.2.1
   geolocator: ^9.0.2
+  marker_icon: ^0.7.1
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/car.png
+    - assets/marker.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
